<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_black_18" />
        <item
            android:id="@+id/logariasmos"
            android:title="@string/logariasmos"
            android:icon="@drawable/baseline_perm_identity_black_24">
        </item>
        <item
            android:id="@+id/proionta"
            android:title="Προιόντα"
            android:icon="@drawable/baseline_laptop_black_24" />
        <item
            android:id="@+id/pwliseis"
            android:title="Πωλήσεις"
            android:icon="@drawable/baseline_euro_black_24">
        </item>
        <item
            android:id="@+id/agora"
            android:title="@string/agora"
            android:icon="@drawable/baseline_shopping_cart_black_24">
        </item>
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/baseline_search_black_24">
        </item>
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/baseline_info_black_24">
        </item>
    </group>

</menu>